--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,2 +1,16 @@
 /*** PAGE ***/
 
+.page {
+  width:100%;
+  margin: 0;
+  padding: 0;
+  background: #2A2C2F;
+  color: #FFFFFF;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
+  font-family: "Inter", "Arial", sans-serif;
+}
