--- a/pages/index.css
+++ b/pages/index.css
@@ -5,4 +5,11 @@
 @import url("../vendor/fonts.css");
 
 /*** PAGE ***/
-@import url("../vendor/pages.css");
+@import url("../blocks/page/page.css");
+
+/*** HEADER ***/
+@import url("../blocks/header/header.css");
+@import url("../blocks/header/__logo/header__logo.css");
+@import url("../blocks/header/__list/header__list.css");
+@import url("../blocks/header/__list-item/header__list-item.css");
+@import url("../blocks/header/__link/header__link.css");
