--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,10 +1,13 @@
 /*** LINK ***/
 
 .header__link {
+  margin:0;
+  padding:0;
   text-decoration: none;
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
   color: #FFFFFF;
+
 }
