--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -13,4 +13,5 @@
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
   font-family: "Inter", "Arial", sans-serif;
+  box-sizing: border-box;
 }
