--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -9,5 +9,9 @@
   font-size: 24px;
   line-height: 28px;
   color: #FFFFFF;
+  transition: 0.3s ease;
+}
 
+.header__link:hover {
+  opacity: 0.8;
 }
