--- a/pages/index.css
+++ b/pages/index.css
@@ -13,3 +13,4 @@
 @import url("../blocks/header/__list/header__list.css");
 @import url("../blocks/header/__list-item/header__list-item.css");
 @import url("../blocks/header/__link/header__link.css");
+@import url("../blocks/header/__link/_activated/header__link_activated.css");
