--- a/pages/index.css
+++ b/pages/index.css
@@ -14,3 +14,14 @@
 @import url("../blocks/header/__list-item/header__list-item.css");
 @import url("../blocks/header/__link/header__link.css");
 @import url("../blocks/header/__link/_activated/header__link_activated.css");
+
+/*** CONTENT ***/
+
+/*** LEAD ***/
+
+@import url("../blocks/lead/lead.css");
+@import url("../blocks/lead/__title/lead__title.css");
+@import url("../blocks/lead/__subtitle/lead__subtitle.css");
+@import url("../blocks/lead/__figure/lead__figure.css");
+@import url("../blocks/lead/__image/lead__images.css");
+
