--- a/pages/index.css
+++ b/pages/index.css
@@ -19,7 +19,6 @@
 @import url("../blocks/content/content.css");
 
 /*** LEAD ***/
-
 @import url("../blocks/lead/lead.css");
 @import url("../blocks/lead/__title/lead__title.css");
 @import url("../blocks/lead/__subtitle/lead__subtitle.css");
@@ -27,3 +26,9 @@
 @import url("../blocks/lead/__image/lead__images.css");
 @import url("../blocks/lead/__caption/lead__caption.css");
 
+/*** INTRO ***/
+@import url("../blocks/intro/intro.css");
+@import url("../blocks/intro/__title/intro__title.css");
+@import url("../blocks/intro/__text/intro__text.css");
+@import url("../blocks/intro/__list/intro__list.css");
+@import url("../blocks/intro/__numbers/intro__numbers.css");
