photo-grid  wip

--- a/pages/index.css
+++ b/pages/index.css
@@ -32,3 +32,6 @@
 @import url("../blocks/intro/__text/intro__text.css");
 @import url("../blocks/intro/__list/intro__list.css");
 @import url("../blocks/intro/__numbers/intro__numbers.css");
+
+/*** PHOTO GRID ***/
+@import url("../blocks/photo-grid/photo-grid.css");
