--- a/pages/index.css
+++ b/pages/index.css
@@ -35,3 +35,4 @@
 
 /*** PHOTO GRID ***/
 @import url("../blocks/photo-grid/photo-grid.css");
+@import url("../blocks/photo-grid/__list/photo-grid__list.css");
