--- a/blocks/photo-grid/__list/photo-grid__list.css
+++ b/blocks/photo-grid/__list/photo-grid__list.css
@@ -4,8 +4,29 @@
   width: 100%;
   display: grid;
   margin: 0 auto;
+  padding: 0;
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
   gap: 16px;
   list-style: none;
+}
 
+@media screen and (max-width: 1024px) {
+  .photo-grid {
+    width: calc(100% - (2 * 48px));
+    gap: 14px;
+  }
+}
+
+@media screen and (max-width: 984px) {
+  .photo-grid {
+    width: calc(100% - (2 * 24px));
+    gap: 16px;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .photo-grid {
+    width: calc(100% - (2 * 16px));
+    gap: 12px;
+  }
 }
