--- a/pages/index.css
+++ b/pages/index.css
@@ -36,3 +36,4 @@
 /*** PHOTO GRID ***/
 @import url("../blocks/photo-grid/photo-grid.css");
 @import url("../blocks/photo-grid/__list/photo-grid__list.css");
+@import url("../blocks/photo-grid/__item/photo-grid__item.css");
