--- a/pages/index.css
+++ b/pages/index.css
@@ -49,3 +49,6 @@
 @import url("../blocks/place/__url-heading/place__url-heading.css");
 @import url("../blocks/place/__link/place__link.css");
 @import url("../blocks/place/__paragraph/place__paragraph.css");
+
+/*** COVER ***/
+@import url("../blocks/cover/cover.css");
