--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -5,3 +5,10 @@
   padding: 0;
   width: calc(100% - (2*48px));
 }
+
+@media screen and (max-width: 1024px) {
+  .cover {
+    margin: 0;
+    width: 100%;
+  }
+}
