--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -7,20 +7,22 @@
   height: auto;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .place__image {
     max-width: 440px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width:1023px) {
   .place__image {
     max-width: 340px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .place__image {
-    max-width: 320px;
+    display: flex;
+    flex: 1;
+    width: 100%;
   }
 }
