--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -8,14 +8,14 @@
     padding:0 0 80px 0;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .place {
     grid-template-columns: 440px 1fr;
     gap: 48px 32px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width:1023px) {
   .place {
     grid-template-columns: 340px 1fr;
     gap: 48px 28px;
@@ -23,9 +23,9 @@
   }
 }
 
-@media screen and (max-width: 620px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .place {
-    grid-template-columns: 100%;
+    grid-template-columns: 1fr;
     gap: 16px;
     padding: 0 0 50px 0;
   }
