--- a/pages/index.css
+++ b/pages/index.css
@@ -62,3 +62,7 @@
 @import url("../blocks/footer/__item/footer__item.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
 @import url("../blocks/footer/__link/footer__link.css");
+
+* {
+  outline: 1px solid yellowgreen;
+}
