--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -3,8 +3,12 @@
 .place__paragraph {
   font-weight: 400;
   font-size: 18px;
-  line-height: 26px;
+  line-height: 163%;
   margin: 0;
+  padding: 0 0 26px 0;
+}
+
+.place__paragraph:last-child {
   padding: 0;
 }
 
