--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -2,10 +2,10 @@
 
 .cover__subtitle {
       margin: 0 auto;
-      padding: 32px 0 0 0;
+      padding: 0;
       font-family: "Inter", "Arial", sans-serif;
       font-size: 18px;
-      line-height: 22px;
+      line-height: 122%;
       text-align: center;
       font-weight: 400;
       max-width: 360px;
