--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -2,11 +2,11 @@
 
     .cover__title {
       display: flex;
-      margin: 0 auto;
+      margin: 0 auto 32px;
       padding: 0;
       font-family: "Inter", "Arial", sans-serif;
       font-size: 72px;
-      line-height: 1.05;
+      line-height: 106%;
       text-align: center;
       font-weight: 900;
       max-width: 560px;
