--- a/blocks/footer/__item/footer__item.css
+++ b/blocks/footer/__item/footer__item.css
@@ -7,3 +7,16 @@
   padding: 0 18px 0 0;
   text-decoration: none;
 }
+.footer__item:last-child{
+  padding: 0;
+}
+
+@media screen and (min-width: 320px)  and (max-width:767px){
+  .footer__item {
+    margin: 0 0 32px;
+  }
+
+  .footer__item:last-of-type {
+    margin-bottom: 48px;
+  }
+}
