--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -8,7 +8,7 @@
   text-decoration: none;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 320px) and (max-width:767px){
   .footer__list {
     flex-direction: column;
     justify-content: baseline;
