--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -10,6 +10,7 @@
 
 @media screen and (min-width: 320px) and (max-width:767px){
   .footer__list {
+    margin-bottom: 64px;
     flex-direction: column;
     justify-content: baseline;
     align-items: flex-start;
