--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -18,7 +18,7 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .footer {
     flex-direction: column;
     width: calc(100% - 2 * 24px);
