--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -14,6 +14,10 @@
 
 @media screen and (max-width: 540px) {
   .place__paragraph {
-    margin-bottom: 16px;
+    padding: 0 16px;
   }
+}
+
+.place__paragraph:last-child {
+  padding: 0 16;
 }
