--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -12,7 +12,7 @@
   padding: 0;
 }
 
-@media screen and (max-width: 540px) {
+@media screen and (min-width: 320px) and (max-width:767px){
   .place__paragraph {
     padding: 0 16px;
   }
