--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -14,10 +14,11 @@
 
 @media screen and (min-width: 320px) and (max-width:767px){
   .place__paragraph {
-    padding: 0 16px 26px 0;
+    max-width: calc(100% - 2*16px);
+    padding: 0 0 26px 0;
   }
     .place__paragraph:last-child {
-      padding: 0 16 0 0;
+      padding: 0 0 0 0;
     }
 }
 
