--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -15,10 +15,10 @@
 @media screen and (min-width: 320px) and (max-width:767px){
   .place__paragraph {
     max-width: calc(100% - 2*16px);
-    padding: 0 0 26px 0;
+    padding: 0 0 26px 16px;
   }
     .place__paragraph:last-child {
-      padding: 0 0 0 0;
+      padding: 0 0 0 16px;
     }
 }
 
