--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -11,9 +11,10 @@
       max-width: 360px;
 }
 
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 767px) {
   .cover__subtitle {
-    padding: 16px 0 0 0;
+    margin: 16px 0 33px 16px;
+    padding: 0;
     max-width: 288px;
     font-size: 14px;
     line-height: 16px;
