--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -12,11 +12,11 @@
       max-width: 560px;
     }
 
-    @media screen and (max-width: 540px) {
+    @media screen and (max-width: 767px) {
       .cover__title {
+        margin: 33px auto 0;
         font-size: 32px;
         line-height: 35px;
         max-width: 288px;
-        padding: 33px 0 16px;
       }
 }
