--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -11,17 +11,16 @@
   padding: 92px 0 24px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
   .footer {
-    width: calc(100% - 2 * 24px);
+    width: calc(100% - (2 * 24px));
     padding: 88px 0 24px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .footer {
     flex-direction: column;
-    width: calc(100% - 2 * 24px);
     padding: 64px 0 24px;
   }
 }
