--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -4,21 +4,21 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 163%;
-  margin: 0;
-  padding: 0 0 26px 0;
+  padding: 0;
+  margin: 0 0 26px 0;
 }
 
 .place__paragraph:last-child {
-  padding: 0;
+  margin: 0;
 }
 
-@media screen and (min-width: 320px) and (max-width:767px){
+@media screen and (max-width:767px){
   .place__paragraph {
     max-width: calc(100% - 2*16px);
-    padding: 0 0 26px 16px;
+    margin: 0 0 26px 16px;
   }
     .place__paragraph:last-child {
-      padding: 0 0 0 16px;
+      margin: 0 0 0 16px;
     }
 }
 
