--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -8,14 +8,14 @@
     padding:0 0 80px 0;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
   .place {
     grid-template-columns: 440px 1fr;
     gap: 48px 32px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width:1023px) {
+@media screen and (max-width:1023px) {
   .place {
     grid-template-columns: 340px 1fr;
     gap: 48px 28px;
@@ -23,7 +23,7 @@
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .place {
     grid-template-columns: 1fr;
     gap: 16px;
