--- a/pages/index.css
+++ b/pages/index.css
@@ -63,3 +63,6 @@
 @import url("../blocks/footer/__copyright/footer__copyright.css");
 @import url("../blocks/footer/__link/footer__link.css");
 
+* {
+  outline: 1px solid yellowgreen;
+}
