--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -13,8 +13,7 @@
 
 @media screen and (max-width: 767px) {
   .cover__subtitle {
-    margin: 16px 0 33px 16px;
-    padding: 0;
+    margin: 16px auto 0;
     max-width: 288px;
     font-size: 14px;
     line-height: 16px;
