--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -14,7 +14,7 @@
 
     @media screen and (max-width: 767px) {
       .cover__title {
-        margin: 33px auto 0;
+        margin: 0 auto;
         font-size: 32px;
         line-height: 35px;
         max-width: 288px;
