--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -8,9 +8,9 @@
   text-decoration: none;
 }
 
-@media screen and (min-width: 320px) and (max-width:767px){
+@media screen and (max-width:767px){
   .footer__list {
-    margin-bottom: 30px;
+    margin-bottom: 16px;
     flex-direction: column;
     justify-content: baseline;
     align-items: flex-start;
