--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -21,6 +21,7 @@
 @media screen and (max-width: 767px) {
   .footer {
     flex-direction: column;
+    width: calc(100% - (2 * 16px));
     padding: 64px 0 24px;
   }
 }
