--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -12,6 +12,13 @@
   margin: 0;
 }
 
+@media screen and (max-width:1023px) {
+  .place__paragraph {
+    font-size: 16px;
+  }
+}
+
+
 @media screen and (max-width:767px){
   .place__paragraph {
     max-width: calc(100% - 2*16px);
