--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -30,7 +30,7 @@
 
 @media screen and (max-width: 767px) {
   .place__title {
-    padding: 64px 16px 32px;
+    padding: 0 16px 16px;
     font-size: 32px;
     line-height: 35px;
     max-width: 288px;
