--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -6,9 +6,10 @@
   padding: 0;
 }
 
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 767px) {
   .place__website {
     max-width: calc(100% - 32px);
     padding-left: 16px;
+    padding-bottom: 16px;
   }
 }
