--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -8,22 +8,20 @@
   width: calc(100% - (2*148px));
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
   .places {
     width: calc(100% - (2*48px));
   }
 }
 
-@media screen and (min-width: 768px) and (max-width:1023px){
+@media screen and (max-width:1023px){
   .places {
-    padding: 0;
     width: calc(100% - (2*24px));
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .places {
-    padding: 0;
     width: 100%;
   }
 }
